--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>1.5.24</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
