--- a/src/test/resources/ui.conf
+++ b/src/test/resources/ui.conf
@@ -1,7 +1,9 @@
 url = "http://localhost:8080/"
+login = "ilyentiy_"
+password = "87390472gov"
 
 page{
-    agiles="agiles/192-2/current"
+    issues="search/"
     hub="admin/hub/users"
     projects="projects"
 }
