--- a/src/test/resources/ui.conf
+++ b/src/test/resources/ui.conf
@@ -1,4 +1,4 @@
-url = "http://localhost:8080/"
+url = "http://host.docker.internal:8080/"
 login = "ilyentiy_"
 password = "87390472gov"
 
@@ -6,4 +6,5 @@ page{
     issues="search/"
     hub="admin/hub/users"
     projects="projects"
+    agiles="agiles"
 }
